--- a/examples/examples.html
+++ b/examples/examples.html
@@ -3,15 +3,12 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>gotoв app!</title>
-      <!-- External stylesheets go here -->
-      <!-- Example stylesheet: normalize.css -->
+      <title>Examples - gotoв</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
    </head>
    <body>
       <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
-      <!-- External js libraries/scripts go here -->
       <script src="../gotoB.min.js"></script>
-      <script src="app.js"></script>
+      <script src="examples.js"></script>
    </body>
 </html>
