Update recalc to v5.0.4; some example updates.

--- a/examples/cart.html
+++ b/examples/cart.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <title>Shopping cart - gotoв</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+      <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css">
    </head>
    <body>
       <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
